<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License. 
 * To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/4.0/.
 */
-->
<resources>

    <string name="action_settings">Settings</string>
    <string name="addText">Add</string>
    <string name="ajout_des_indiagrams">Adding indiagrams</string>
    <string name="app_name">India Rose Administration</string>
    <string name="appSettingsText">Application Settings</string>
    <string name="backgroundColorInfo">Click on an area to change its color.</string>
    <string name="backgroundColorSizeLabel">Size of the selection area : </string>
    <string name="backgroundColorSizeUnit">%</string>
    <string name="backgroundColorText">Background color</string>
    <string name="backText">Back</string>
    <string name="camera">Appareil Photo</string>
    <string name="cancel">Cancel</string>
    <string name="cancelText">Cancel</string>
    <string name="canNotDeleteCategory">Can not delete category because it contains indiagrams</string>
    <string name="canNotSaveCategory">Can not change category to indiagram because category contains indiagrams</string>
    <string name="categoryReadingQuestion">Read category sound when selected ?</string>
    <string name="categoryReadingText">Category reading</string>
    <string name="chooseColor">Choose color</string>
    <string name="choose_ivona">Choose Ivona TTS</string>
    <string name="choosePicture">Choose picture</string>
    <string name="chooseSound">Choose sound</string>
    <string name="contact">Contact</string>
    <string name="collectionManagementText">Indiagram Collection Management</string>
    <string name="correctionCategoryName">Correction</string>
    <string name="crash_toast_text">An error happened, help us to upgrade our application by sending us crash reports</string>
    <string name="credits">Credits</string>
    <string name="decompressionArchive">Unzipping</string>
    <string name="deleteQuestion">Are you sure to delete this indiagram ?</string>
    <string name="deleteSoundQuestion">Are you sure you want to delete this sound ?</string>
    <string name="deleteText">Delete</string>
    <string name="deux">2</string>
    <string name="disableText">Disable</string>
    <string name="dragDropQuestion">Use the drag and drop mode ?</string>
    <string name="dragDropText">Drag and drop</string>
    <string name="editText">Edit</string>
    <string name="email_address">equipe.indiarose@gmail.com</string>
    <string name="email_title">[Contact]</string>
    <string name="email_body"></string>
    <string name="enableText">Enable</string>
    <string name="error_add_indiagram_name">Pleast insert an indiagram name</string>
    <string name="filePathLabel">File path : </string>
    <string name="finalisation">Finalisation</string>
    <string name="fontLabel">Font : </string>
    <string name="fontSizeLabel">Font size : </string>
    <string name="fontSizeTitle">Font size</string>
    <string name="fontTitle">Font</string>
    <string name="gallery">Album</string>
    <string name="goIntoText">Go into</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Help</string>
    <string name="homeCategoryButton">Home</string>
    <string name="homeCategoryName">Home</string>
    <string name="homeText">Home</string>
    <string name="home_install_tts">Improve the voice synthesis engine</string>
    <string name="importArchive">Import Archive</string>
    <string name="imageSizeLabel">Size of indiagram : </string>
    <string name="imageSizeTitle">Size of indiagram</string>
    <string name="indiagramCategoryLabel">Parent category : </string>
    <string name="indiagramCategoryTitle">Parent category</string>
    <string name="indiagramLabel">Indiagram : </string>
    <string name="indiagramNoSound">No sound</string>
    <string name="indiagramPropertyText">Indiagram properties</string>
    <string name="indiagramSoundLabel">Sound : </string>
    <string name="indiagramSoundTitle">Sound</string>
    <string name="indiagramTextColorLabel">Text color : </string>
    <string name="indiagramTextLabel">Text :</string>
    <string name="indiagramTextTitle">Text Indiagram</string>
    <string name="install_pack_language">Install pack language</string>
    <string name="installation_tts_inova">Install TTS Inova</string>
    
    <string name="isCategoryLabel">Is a category</string>
    <string name="loading">Loading</string>
    <string name="load_sdcard">Import from carte SD</string>
    <string name="loadImageSdcard">Load image from sdcard</string>
    <string name="loadSoundSdcard">Load sound from sdcard</string>
    <string name="logAlertMessage">We collect informations about how you use IndiaRose, we need your agreement to send them. Do you agree?</string>
    <string name="logAlertTitle">Request to send Logs</string>
    <string name="loginLabel">Login : </string>
    <string name="logProgressMessage">Preparing sending logs</string>
    <string name="logProgressTitle">Transferring Logs</string>
    <string name="long_operation">Long operation starts</string>
    <string name="listenButton">Read</string>
    <string name="menu_settings">Settings</string>
    <string name="nameLabel">Name : </string>
    <string name="nextText">Next</string>
    <string name="noCameraMessage">No camera on this device</string>
    <string name="noInternet">No internet connection enabled.</string>
    <string name="noLog">No log file to send</string>
    <string name="noMicrophoneMessage">No microphone detected</string>
    <string name="notsound">Choose text or sound</string>
    <string name="okText">OK</string>
    <string name="ok">Continue</string>
    <string name="passLabel">Password : </string>
    <string name="pathXmls">/xml/en/</string>
    <string name="pickAColor">Pick a color</string>
    <string name="pickCategoryButton">Select category</string>
    <string name="please_wait">Please wait</string>
    <string name="previousText">Back</string>
    <string name="quitText">Quit</string>
    <string name="readingDelayQuestion">Delay between word reading</string>
    <string name="readingDelayText">Reading delay between words</string>
    <string name="record">Recorder</string>
    <string name="recordSound">Record sound</string>
    <string name="reinforcerColorButton">Change reinforcer color</string>
    <string name="reinforcerReadingLabel">Reading reinforcer enable</string>
    <string name="resetSettingsQuestion">Are you sure you want to reset settings ?</string>
    <string name="resetSettingsText">Reset settings</string>
    <string name="save_in_progress">Save in progress</string>
    <string name="save_successfully">Save successfully</string>
    <string name="seeText">Look</string>
    <string name="selectText">Select</string>
    <string name="sendLogs">Send Logs</string>
    <string name="sendLogToast">Sending your Logs in background. </string>
    <string name="startLoading">Start loading</string>
    <string name="startRecording">Start recording</string>
    <string name="startSending">Start sending</string>
    <string name="stopRecording">Stop recording</string>
    <string name="stopSending">Stop sending</string>
    <string name="synchroCredentials">Cloud credentials</string>
    <string name="synchroFinished">Synchronization finished</string>
    <string name="synchroLabel">Synchronization&#8230;</string>
    <string name="synchronizeText">Synchronize</string>
    <string name="takeImage">Take a picture with camera</string>
    <string name="title_activity_add_indiagram">AddIndiagram</string>
    <string name="title_activity_edit_indiagram">EditIndiagram</string>
    <string name="title_activity_india_property">IndiaProperty</string>
    <string name="title_activity_main">India Rose Administration</string>
    <string name="title_activity_picto_selection">India Rose</string>
    <string name="trois">3</string>
    <string name="un">1</string>
    <string name="warningChangeLangage">Warning, changing langage will remove your personnal indiagrams. Do you want to continue?</string>
    <string name="whichActionQuestion">What do you want to do ?</string>

</resources>