<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="10dip"
        android:gravity="center" >

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dip"
            android:text="@string/installation_tts_inova"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/install_ivona_launch_tts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/buttonred"
            android:minWidth="70dip"
            android:text="@string/un"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="10dip"
        android:gravity="center" >

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dip"
            android:text="@string/install_pack_language"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/install_ivona_pack_tts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/buttonblue"
            android:minWidth="70dip"
            android:text="@string/deux"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="10dip"
        android:gravity="center" >

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dip"
            android:text="@string/choose_ivona"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/install_ivona_launch_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/buttongreen"
            android:minWidth="70dip"
            android:text="@string/trois"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>