<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License. 
 * To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/4.0/.
 */
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="50dip"
    android:paddingRight="50dip" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dip"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="25dip"
        android:paddingTop="25dip" >

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dip"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/app_settings_bacground_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="4dip"
                android:layout_weight="1"
                android:background="@drawable/buttonpink"
                android:text="@string/backgroundColorText"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/app_settings_indiagram_property"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="4dip"
                android:layout_toRightOf="@+id/app_settings_bacground_color"
                android:layout_weight="1"
                android:background="@drawable/buttonviolet"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/indiagramPropertyText"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/app_settings_drag_and_drop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttongreen"
                android:text="@string/dragDropText"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dip"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/app_settings_category_reading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="4dip"
                android:layout_weight="1"
                android:background="@drawable/buttonblue"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/categoryReadingText"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/app_settings_reading_delay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="4dip"
                android:layout_weight="1"
                android:background="@drawable/buttonblue"
                android:text="@string/readingDelayText"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/app_settings_reset_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttonpink"
                android:text="@string/resetSettingsText"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/app_settings_previous"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonorange"
            android:text="@string/previousText"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>